--- a/ar/egypt-campaign.html
+++ b/ar/egypt-campaign.html
@@ -19,6 +19,11 @@
   <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
   <link rel="stylesheet" href="assets/css/custom.css?v=2.106" />
+
+  <!-- Google Analytics & Pixel Code - Start -->
+  
+  <!-- Google Analytics & Pixel Code - End -->
+  
 </head>
 
 <body>
